[gd_scene load_steps=6 format=3 uid="uid://4ho5db3vcuki"]

[ext_resource type="Script" path="res://Escenas/Menu/menuGeneral.gd" id="1_nvon6"]
[ext_resource type="Script" path="res://Escenas/Menu/MenuVertical.gd" id="2_3mry2"]
[ext_resource type="Script" path="res://Escenas/Menu/AbrirMenu.gd" id="3_jtrno"]
[ext_resource type="Script" path="res://Escenas/Menu/NivelesMenu.gd" id="3_ju4n6"]
[ext_resource type="Script" path="res://Escenas/Menu/MenuPrincipal.gd" id="4_sk3le"]

[node name="Menu Hub" type="CanvasLayer"]
layer = 100

[node name="Menu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_nvon6")

[node name="Niveles" type="VBoxContainer" parent="Menu"]
layout_mode = 2
offset_left = 55.0
offset_top = 51.0
offset_right = 426.0
offset_bottom = 589.0
script = ExtResource("2_3mry2")

[node name="Lvl1" type="Button" parent="Menu/Niveles"]
layout_mode = 2
text = "Nivel 1"

[node name="Lvl2" type="Button" parent="Menu/Niveles"]
layout_mode = 2
text = "Nivel 2
"

[node name="Lvl3" type="Button" parent="Menu/Niveles"]
layout_mode = 2
text = "Nivel 3"

[node name="Control" type="Control" parent="Menu/Niveles"]
layout_mode = 2
script = ExtResource("3_ju4n6")

[node name="Principal" type="VBoxContainer" parent="Menu"]
layout_mode = 0
offset_left = 55.0
offset_top = 50.0
offset_right = 426.0
offset_bottom = 606.0
script = ExtResource("2_3mry2")
isShowed = true

[node name="Niveles" type="Button" parent="Menu/Principal" node_paths=PackedStringArray("menu")]
layout_mode = 2
text = "Niveles"
script = ExtResource("3_jtrno")
menu = NodePath("../../Niveles")

[node name="Salir" type="Button" parent="Menu/Principal"]
layout_mode = 2
text = "Salir"

[node name="Control" type="Control" parent="Menu/Principal"]
layout_mode = 2
script = ExtResource("4_sk3le")

[connection signal="pressed" from="Menu/Niveles/Lvl1" to="Menu/Niveles/Control" method="_on_lvl_1_pressed"]
[connection signal="pressed" from="Menu/Niveles/Lvl2" to="Menu/Niveles/Control" method="_on_lvl_2_pressed"]
[connection signal="pressed" from="Menu/Niveles/Lvl3" to="Menu/Niveles/Control" method="_on_lvl_3_pressed"]
[connection signal="pressed" from="Menu/Principal/Niveles" to="Menu/Principal/Niveles" method="_on_pressed"]
[connection signal="pressed" from="Menu/Principal/Salir" to="Menu/Principal/Control" method="_on_salir_pressed"]
